# kunai

./: .travis.yml  Cargo.toml  README.md
src/: atcoder.rs  cargo_wrapper.rs  config.rs  judge.rs  lib.rs  scraping.rs  unify.rs
test_data/test-crate/: Cargo.toml
test_data/test-crate/src/: lib.rs
test_data/test1/: Cargo.toml  correct.txt
test_data/test1/src/: lib.rs
test_data/test2/: Cargo.toml
test_data/test2/src/: lib.rs
test_data/test3/: Cargo.toml
test_data/test3/src/: lib.rs
