[package]
name = "kunai"
version = "0.3.0"
authors = ["Masato Mouri <13274198+mouri111@users.noreply.github.com>"]
edition = "2018"
description = "A competitive programming tool for Rust"
readme = "README.md"
repository = "https://github.com/mouri111/kunai"
license = "MIT OR Apache-2.0"
exclude = [
    "/test_data"
]

[dependencies]
dirs = "2.0"
clap = "2.33"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rustfmt-nightly = "1.4"
cargo = "0.39"
scraper = "0.11.0"
reqwest = "0.9.24"
url = "2.1.0"
glob = "0.3.0"
termion = "1.5.4"
