[package]
name = "kunai"
version = "0.5.0"
authors = ["Masato Mouri <13274198+mouri111@users.noreply.github.com>"]
edition = "2018"
description = "A competitive programming tool for Rust"
readme = "README.md"
repository = "https://github.com/mouri111/kunai"
license = "MIT OR Apache-2.0"
exclude = [
    "/test_data"
]

[dependencies]
dirs = "3.0.0"
clap = "2.33.1"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
rustfmt-nightly = "1.4.18"
cargo = "0.45.1"
scraper = "0.12.0"
reqwest = { version = "0.10.6", features = ["cookies", "blocking"] }
url = "2.1.1"
glob = "0.3.0"
termion = "1.5.5"
